<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xUtilsDemo</string>
    <string name="action_settings">Settings</string>
    <string name="textTitle">xUtilsDemo</string>
    <string name="viewDemo">viewDemo</string>
    <string name="httpDemo">httpDemo</string>
    <string name="bitmapDemo">bitmapDemo</string>
    <string name="dbDemo">dbDemo</string>
    <string name="logDemo">logDemo</string>

</resources>
