<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTitle" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textTitle"
        android:text="@string/viewDemo" />

    <Button
        android:id="@+id/httpDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnView"
        android:text="@string/httpDemo" />

    <Button
        android:id="@+id/bitmapDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/httpDemo"
        android:layout_below="@+id/httpDemo"
        android:text="@string/bitmapDemo" />

    <Button
        android:id="@+id/dbDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/bitmapDemo"
        android:layout_below="@+id/bitmapDemo"
        android:text="@string/dbDemo" />

    <Button
        android:id="@+id/logDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbDemo"
        android:layout_alignRight="@+id/dbDemo"
        android:layout_below="@+id/dbDemo"
        android:text="@string/logDemo" />

</RelativeLayout>